--- a/pages/2040.html
+++ b/pages/2040.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5835/#Item_23" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5835/#Item_24" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -905,7 +905,7 @@ margin-left: 0em;
 
 <ul>
 <li id="Barwick14">
-<p><a class="existingWikiWord" href="/nlab/show/Clark+Barwick">Clark Barwick</a>, <em>Spectral Mackey functors and equivariant algebraic K-theory (I)</em>, Adv. Math., 304:646–727, 2017 (<a href="http://arxiv.org/abs/1404.0108">arXiv:1404.0108</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Clark+Barwick">Clark Barwick</a>, <em>Spectral Mackey functors and equivariant algebraic K-theory (I)</em>, Adv. Math., 304:646–727, 2017 (<a href="https://doi.org/10.1016/j.aim.2016.08.043">doi:10.1016/j.aim.2016.08.043</a>, <a href="http://arxiv.org/abs/1404.0108">arXiv:1404.0108</a>)</p>
 </li>
 
 <li id="Barwick15">
@@ -927,11 +927,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Bert+Guillou">Bert Guillou</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>Permutative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-categories in equivariant infinite loop space theory</em> (<a href="http://arxiv.org/abs/1207.3459">arXiv:1207.3459</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Bert+Guillou">Bert Guillou</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>Permutative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-categories in equivariant infinite loop space theory</em>, Algebr. Geom. Topol. 17 (2017) 3259-3339 (<a href="http://arxiv.org/abs/1207.3459">arXiv:1207.3459</a>)</p>
 </li>
 
 <li id="Nardin12">
-<p><a class="existingWikiWord" href="/nlab/show/Denis+Nardin">Denis Nardin</a>, section 2.6 and appendix A of <em>Stability and distributivity over orbital ∞-categories</em>, 2012 (<a href="https://www.math.univ-paris13.fr/~nardin/thesis.pdf">pdf</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Denis+Nardin">Denis Nardin</a>, section 2.6 and appendix A of <em>Stability and distributivity over orbital ∞-categories</em>, 2012 (<a href="http://hdl.handle.net/1721.1/112895">hdl.handle.net/1721.1/112895</a>, <a href="https://www.math.univ-paris13.fr/~nardin/thesis.pdf">pdf</a>)</p>
 </li>
 </ul>
 
@@ -954,14 +954,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 31, 2018 at 16:27:35.
+  Last revised on January  3, 2019 at 09:32:55.
   See the <a href="https://ncatlab.org/nlab/history/Mackey functor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Mackey+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mackey+functor/38" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(38 revisions)</span> | <a href="/nlab/show/diff/Mackey+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mackey+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Mackey+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mackey+functor/39" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(39 revisions)</span> | <a href="/nlab/show/diff/Mackey+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mackey+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Mackey functor/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
