--- a/pages/6113.html
+++ b/pages/6113.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/2775/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2775/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -463,7 +463,7 @@ margin-left: 0em;
 
 <p>On the one hand, this is the case for its incarnation as a <a class="existingWikiWord" href="/nlab/show/1-functor">1-functor</a> with values in <a class="existingWikiWord" href="/nlab/show/structured+spectra">structured spectra</a> (<a href="Introduction+to+Stable+homotopy+theory+--+1-2#SmashProductOfFreeSpectra">this Prop.</a>) Via the corresponding <a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+smash+product+of+spectra">symetric monoidal</a> <a class="existingWikiWord" href="/nlab/show/Model+categories+of+diagram+spectra">model structure on structured spectra</a> this exhibits strong monoidalness also as an <a class="existingWikiWord" href="/nlab/show/%28infinity%2C1%29-functor">(infinity,1)-functor</a>.</p>
 
-<p>More abstractly this follows from general properties of <a class="existingWikiWord" href="/nlab/show/stabilization">stabilization</a> when regarding <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a> as the result of inverting <a class="existingWikiWord" href="/nlab/show/smash+product">smash product</a> with the <a class="existingWikiWord" href="/nlab/show/circle">circle</a>, via <a href="#stabilization#Robalo12">Robalo 12, last clause of Prop. 4.1 with last clause of Prop. 4.10 (1)</a>. For emphasis see also <a href="stabilization#Hoyois15">Hoyois 15, section 6.1</a>, specifically <a href="stabilization#Hoyois15">Hoyois 15, Def. 6.1</a>.</p>
+<p>More abstractly this follows from general properties of <a class="existingWikiWord" href="/nlab/show/stabilization">stabilization</a> when regarding <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a> as the result of inverting <a class="existingWikiWord" href="/nlab/show/smash+product">smash product</a> with the <a class="existingWikiWord" href="/nlab/show/circle">circle</a>, via <a href="stabilization#Robalo12">Robalo 12, last clause of Prop. 4.1 with last clause of Prop. 4.10 (1)</a>. For emphasis see also <a href="stabilization#Hoyois15">Hoyois 15, section 6.1</a>, specifically <a href="stabilization#Hoyois15">Hoyois 15, Def. 6.1</a>.</p>
 
 <h3 id="recognition_and_diagonals">Recognition and diagonals</h3>
 
@@ -516,14 +516,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  2, 2019 at 11:18:46.
+  Last revised on January  3, 2019 at 12:22:55.
   See the <a href="https://ncatlab.org/nlab/history/suspension spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/suspension+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/suspension+spectrum/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/suspension+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/suspension+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/suspension+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/suspension+spectrum/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/suspension+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/suspension+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/suspension spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
