--- a/pages/1814.html
+++ b/pages/1814.html
@@ -601,7 +601,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Cofibrations">Cofibrations</a> (and hence <a class="existingWikiWord" href="/nlab/show/acyclic+cofibrations">acyclic cofibrations</a>) are preserved because all cofibrations of topological spaces are injective maps, injective maps are preserved, and all injective maps of simplicial sets are cofibrations.</p>
+<p><a class="existingWikiWord" href="/nlab/show/Cofibrations">Cofibrations</a> (and hence <a class="existingWikiWord" href="/nlab/show/acyclic+cofibrations">acyclic cofibrations</a>) are preserved because all cofibrations of topological spaces are <a class="existingWikiWord" href="/nlab/show/injective+functions">injective functions</a>, injective maps are preserved, and all injective maps of simplicial sets are cofibrations.</p>
 </li>
 
 <li>
@@ -638,14 +638,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  5, 2019 at 04:35:20.
+  Last revised on January  5, 2019 at 05:09:05.
   See the <a href="https://ncatlab.org/nlab/history/singular simplicial complex" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/singular+simplicial+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/singular+simplicial+complex/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/singular+simplicial+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/singular+simplicial+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/singular+simplicial+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/singular+simplicial+complex/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/singular+simplicial+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/singular+simplicial+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/singular simplicial complex/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
