--- a/pages/1814.html
+++ b/pages/1814.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9428/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9428/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -597,15 +597,15 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/weak+equivalences">Weak equivalences</a> are preserved by definition of the <a class="existingWikiWord" href="/nlab/show/model+structure">model structure</a> on topological spaces, which is <a class="existingWikiWord" href="/nlab/show/transferred+model+structure">transferred</a> from <a class="existingWikiWord" href="/nlab/show/simplicial+sets">simplicial sets</a>.</p>
+<p><a class="existingWikiWord" href="/nlab/show/weak+equivalences">Weak equivalences</a> are preserved; the reason depends on how the model structures are constructed. The <a class="existingWikiWord" href="/nlab/show/classical+model+structure+on+topological+spaces">classical model structure on topological spaces</a> can be defined to be <a class="existingWikiWord" href="/nlab/show/transferred+model+structure">transferred</a> from <a class="existingWikiWord" href="/nlab/show/simplicial+sets">simplicial sets</a>, in which case the singular complex preserves weak equivalences by definition. More traditionally, the weak equivalences in the <a class="existingWikiWord" href="/nlab/show/classical+model+structure+on+simplicial+sets">classical model structure on simplicial sets</a> are defined to be those whose geometric realization is a (weak) <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a>, and the preservation then follows from the 2-out-of-3 property and the fact that the geometric realization of the total singular complex is a <span class="newWikiWord">CW replacement<a href="/nlab/new/CW+replacement">?</a></span> that is <a class="existingWikiWord" href="/nlab/show/weak+homotopy+equivalence">weakly homotopy equivalent</a> to the original space.</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Cofibrations">Cofibrations</a> (and hence <a class="existingWikiWord" href="/nlab/show/acyclic+cofibrations">acyclic cofibrations</a>) are preserved because all cofibrations of topological spaces are <a class="existingWikiWord" href="/nlab/show/injective+functions">injective functions</a>, injective maps are preserved, and all injective maps of simplicial sets are cofibrations.</p>
+<p><a class="existingWikiWord" href="/nlab/show/Cofibrations">Cofibrations</a> are preserved because all cofibrations of topological spaces are <a class="existingWikiWord" href="/nlab/show/injective+functions">injective functions</a>, injective maps are preserved, and all injective maps of simplicial sets are cofibrations.</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/fibrations">Fibrations</a> and <a class="existingWikiWord" href="/nlab/show/acyclic+fibrations">acyclic fibrations</a> are preserved because the singular complex functor is a <a class="existingWikiWord" href="/nlab/show/right+Quillen+functor">right Quillen functor</a>.</p>
+<p><a class="existingWikiWord" href="/nlab/show/fibrations">Fibrations</a> and <a class="existingWikiWord" href="/nlab/show/acyclic+fibrations">acyclic fibrations</a> are preserved because the singular complex functor is a <a class="existingWikiWord" href="/nlab/show/right+Quillen+functor">right Quillen functor</a>. More explicitly, this is because geometric realization takes the generating cofibrations and acyclic cofibrations of simplicial sets to those of topological spaces.</p>
 </li>
 </ul>
 
@@ -638,14 +638,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  5, 2019 at 05:09:05.
+  Last revised on January  5, 2019 at 07:59:07.
   See the <a href="https://ncatlab.org/nlab/history/singular simplicial complex" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/singular+simplicial+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/singular+simplicial+complex/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/singular+simplicial+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/singular+simplicial+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/singular+simplicial+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/singular+simplicial+complex/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/singular+simplicial+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/singular+simplicial+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/singular simplicial complex/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
