--- a/pages/5699.html
+++ b/pages/5699.html
@@ -339,6 +339,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id="selected_writings">selected writings</h2>
+
+<ul>
+<li id="NeitzkeVafa04"><a class="existingWikiWord" href="/nlab/show/Andrew+Neitzke">Andrew Neitzke</a>, <a class="existingWikiWord" href="/nlab/show/Cumrun+Vafa">Cumrun Vafa</a>, <em>Topological strings and their physical applications</em>, talk at <a href="http://insti.physics.sunysb.edu/conf/simonsworkII/">Simons Workshop in Mathematics and Physics 2004</a> (<a href="http://xxx.lanl.gov/abs/hep-th/0410178">hep-th/0410178</a>)</li>
+</ul>
+
 <h2 id="related_lab_entries">Related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
@@ -554,14 +560,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 26, 2018 at 04:04:36.
+  Last revised on January  5, 2019 at 10:39:16.
   See the <a href="https://ncatlab.org/nlab/history/Cumrun Vafa" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Cumrun+Vafa" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cumrun+Vafa/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Cumrun+Vafa" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cumrun+Vafa" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Cumrun+Vafa" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cumrun+Vafa/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Cumrun+Vafa" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cumrun+Vafa" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Cumrun Vafa/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
